--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,73 @@
-.App {
-  text-align: center;
+.Search{
+  padding: 10px;
+  font-size: 17px;
+  border: 1px solid grey;
+  float: left;
+  width: 30vw;
+  min-width: 150px;
+  background: #f1f1f1;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.Button{
+  float: right;
+  width: 10vw;
+  min-width: 100px;
+  padding: 10px;
+  background: #2196F3;
   color: white;
+  font-size: 17px;
+  border: 1px solid grey;
+  margin-left: 10px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+.Button:hover{
+  background: #1571bd;
+}
+.Results{
+  margin-left: auto;
+  margin-right: auto;
+  
+  max-width: 600px;
+  display: block;
+  margin-top: 10px;
+  padding: 20px;
+  padding-top: 0px;
+  color: #394275;
+  font-size: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+ul {
+  margin: 0px;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0;
+  list-style-type: none;    
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+li {
+  flex: 0 0 50%;
+}
+.Name{
+  float: left;
+}
+.City{
+  float: right;
+}
+.Header{
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 600px;
+  display: block;
+  margin-top: 20px;
+  padding: 20px;
+  color: #21274a;
+  text-transform: uppercase;
+  font-weight: 900;
+  font-size: 20px;
+}
+.Inputs{
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px;
+  max-width: 600px;
 }
