--- a/src/App.css
+++ b/src/App.css
@@ -2,15 +2,12 @@
   padding: 10px;
   font-size: 17px;
   border: 1px solid grey;
-  float: left;
-  width: 30vw;
-  min-width: 150px;
+  flex: 0 0 60%;
+  min-width: 100px;
   background: #f1f1f1;
 }
 .Button{
-  float: right;
-  width: 10vw;
-  min-width: 100px;
+  width: 100px;
   padding: 10px;
   background: #2196F3;
   color: white;
@@ -26,7 +23,6 @@
 .Results{
   margin-left: auto;
   margin-right: auto;
-  
   max-width: 600px;
   display: block;
   margin-top: 10px;
@@ -35,23 +31,18 @@
   color: #394275;
   font-size: 20px;
 }
-
-ul {
+ul{
   margin: 0px;
   display: flex;
   flex-wrap: wrap;
   padding: 0;
   list-style-type: none;    
 }
-
-li {
-  flex: 0 0 50%;
-}
 .Name{
-  float: left;
+  flex: 70% 0 0;
 }
 .City{
-  float: right;
+  flex: 30% 0 0;
 }
 .Header{
   margin-left: auto;
@@ -70,4 +61,7 @@ li {
   margin-right: auto;
   padding: 20px;
   max-width: 600px;
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
 }
